--- a/inst/rmarkdown/templates/pepr-roa/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/pepr-roa/skeleton/skeleton.Rmd
@@ -1,30 +1,36 @@
 ---
 title: "Microbial Reference Material Template Report of Analysis"
 author: "Nathan D. Olson"
-date: "June 5, 2015"
+date: "July 14, 2015"
 output:
   pdf_document:
+    fig_caption: yes
     latex_engine: xelatex
     toc: yes
   html_document: default
-  toc: yes
-  word_document: default
+  word_document:
+    fig_caption: yes
 bibliography: micro_rm_references.bib
 ---
-```{r, echo = FALSE, message = FALSE}
-source("rm_metadata.R")
-```
 
-```{r, echo = FALSE, message=FALSE}
+```{r setup, echo=FALSE, warning = FALSE, message = FALSE}
 library(png)
 library(jpeg)
 library(grid)
 library(peprr)
 library(dplyr)
 library(knitr)
+require(kfigr)
+opts_chunk$set(message=FALSE, warning=FALSE, echo = FALSE)
 ```
 
-```{r echo=FALSE, message=FALSE} 
+
+````{r metadata, echo = FALSE, message = FALSE}
+source("rm_metadata.R")
+source("calc_results_values.R")
+```
+
+```{r loadDB, echo=FALSE, message=FALSE} 
 peprDB <- dplyr::src_sqlite(db_path)
 ```
 
@@ -33,23 +39,27 @@ peprDB <- dplyr::src_sqlite(db_path)
 Increasingly, high stakes decisions impacting public health and safety are being made using microbial genomic sequencing data [@Tang2014]. For example, whole genome sequencing was recently used as part of an investigation of the European 2011 Escherichia coli O1O4:H4 sprout associated outbreak [@Grad2012]. As the stakes increase so does the required level of confidence in the measurement. This reference material as well as three other microbial genomic DNA RM8375-8378 were developed to help advance the measurement assurance of microbial genomic sequencing and DNA sequencing in general. The development of these reference material was supported through an Interagency agreement with the Food and Drug Administration's Center for Devices, for use in validating DNA sequencing platforms for clinical applications.
 
 ## Material Description
-```{r echo = FALSE,child='rm_strain_selection_info.Rmd' }
-## Add text specific to rm regarding strain selection and publically available reference genome sequence
+<!--
+Add text specific to rm regarding strain selection and publically available reference genome sequence
+-->
+```{r rmSpecificStrinInfo, echo = FALSE,child='rm_strain_selection_info.Rmd' }
 ```
 
 
 Loftstrand Labs Limited[^lofstrand] grew a large batch of `r rm_strain` provided by `r strain_source`  to produce ~ `r (rm_vial_number * 3)/1000` mg of total extracted DNA, divided equally into `r rm_vial_number` vials (See appendix for RM label and manufacturer provided report of analysis). Each unit of `r rm_number` is approximately `r rm_mass` ug of extracted genomic DNA in Tris buffer.  The material is stored in 0.5 mL screw cap microcentrifuge tubes (Item number 1405-9710 USA Scientific [^usa]).
 
-```{r echo = FALSE,child='rm_specific_culture_ext.Rmd' }
-## Add text specific to rm regarding culturing conditions and DNA extraction.
+<!--
+Add text specific to rm regarding culturing conditions and DNA extraction.
+-->
+```{r rmSpecificCulture, echo = FALSE,child='rm_specific_culture_ext.Rmd' }
 ```
  
 This RM is isolated DNA rather than live cells because cells can mutate with each cell division, and the genome sequence may not be stable over time for live cells. Extracting DNA from a large batch of cells helps ensure that all vials contain essentially the same DNA sequences. Even though the DNA in the cells is likely to mutate at low frequency during the growth, the resulting mutations will be in extremely small proportions of the overall cells unless they confer a selective advantage and occur early in the culture process. Potential high frequency mutations will be identified as part of the material characterization process. Even if any mutations confer a selective advantage, the DNA from the large batch of cells was mixed before aliquoting to minimize the variability in the proportions of mutations among vials.
  
 ## Intended Use
-The intended use of `r rm_number` is to help assess performance of high-throughput DNA sequencing.  The primary intended use case for the RM is DNA sequencing method validation and quality control.  The genomic DNA is intended to be analyzed in the same way as any other sample a laboratory would analyze extracted DNA, such as through the use of a genome assembly or variant calling bioinformatic pipeline (Fig. 1).  Because the RM is extracted DNA, it does not assess pre-analytical steps such as DNA extraction. It does however, challenge sequencing library preparation, sequencing machines, base calling algorithms, and the subsequent bioinformatic analysis.  This RM is not intended to assess bioinformatics steps such as strain identificaiton, phylogenetic analysis, or genome annotation. It is important to recognize the genome sequence is provided as an “Information Value” rather than “Certified Value” because we were not yet fully confident that we accounted for all known biases.  However, we evaluated the material using a number of orthogonal methods to minimize the impact of systematic errors associated with individual platforms. 
+The intended use of `r rm_number` is to help assess performance of high-throughput DNA sequencing.  The primary intended use case for the RM is DNA sequencing method validation and quality control.  The genomic DNA is intended to be analyzed in the same way as any other sample a laboratory would analyze extracted DNA, such as through the use of a genome assembly or variant calling bioinformatic pipeline (`r figr(label = "process", prefix = TRUE, link = TRUE, type = "Figure")`).  Because the RM is extracted DNA, it does not assess pre-analytical steps such as DNA extraction. It does however, challenge sequencing library preparation, sequencing machines, base calling algorithms, and the subsequent bioinformatic analysis.  This RM is not intended to assess bioinformatics steps such as strain identificaiton, phylogenetic analysis, or genome annotation. It is important to recognize the genome sequence is provided as an “Information Value” rather than “Certified Value” because we were not yet fully confident that we accounted for all known biases.  However, we evaluated the material using a number of orthogonal methods to minimize the impact of systematic errors associated with individual platforms. 
 
-```{r echo = FALSE, fig.width = 6, fig.align='center', fig.cap= "Generic measurement process for genome assembly and variant calling intended use cases.  For sequencing quality control the results from the sequencing step would be compared to the reference material genome sequence to determine base level sequencing accuracy."}
+```{r process, echo = FALSE, fig.width = 6, fig.align='center', fig.cap= "Generic measurement process for genome assembly and variant calling intended use cases.  For sequencing quality control the results from the sequencing step would be compared to the reference material genome sequence to determine base level sequencing accuracy.", anchor = "Figure"}
 grid.raster(readPNG("measurement_process.png"))
 ```
   
@@ -57,11 +67,11 @@ grid.raster(readPNG("measurement_process.png"))
 ## Genome Sequence as a reference value
 Characterizing a microbial genome RM at each of the $`r rm_genome_size/1000000`\times 10^6$ positions poses a significant metrological challenge. The consensus base call at each genomic position is a “nominal property”, because it is not a numerical value.  A previous sequence-based SRM 2374 was certified primarily based on capillary (or “Sanger”) sequencing, a relatively mature sequencing technology that is not easily scalable to whole genomes.  The maturity of capillary sequencing as well as the small size of SRM 2374 (< 100,000 bases) allowed for manual curation of capillary sequencing traces across the entire DNA sequences, and the assignment of qualitative (non-probabilistic) statements about the uncertainty of each base call.
 
-To characterize `r rm_number`, we relied on a variety of less mature “Next Generation Sequencing” (NGS) technologies. Unlike capillary sequencing, NGS technologies can sequence a whole genome at a reasonable cost.  NGS technologies measure many reads at each position, from which variant callers and consensus base callers calculate probabilistic estimates of uncertainty based on Bayesian statistics and assuming binomial sampling.  Unfortunately, these probabilistic estimates of uncertainty are rarely accurate due to various sources of bias and error in the sequencing and bioinformatics (Fig. 1).  Therefore, to develop a characterized reference genome sequence we first generated a _de-novo_ assembly of the genome then performed a base level analysis of the genome assembly.  
+To characterize `r rm_number`, we relied on a variety of less mature “Next Generation Sequencing” (NGS) technologies. Unlike capillary sequencing, NGS technologies can sequence a whole genome at a reasonable cost.  NGS technologies measure many reads at each position, from which variant callers and consensus base callers calculate probabilistic estimates of uncertainty based on Bayesian statistics and assuming binomial sampling.  Unfortunately, these probabilistic estimates of uncertainty are rarely accurate due to various sources of bias and error in the sequencing and bioinformatics.  Therefore, to develop a characterized reference genome sequence we first generated a _de-novo_ assembly of the genome then performed a base level analysis of the genome assembly.  
 
-The sources of bias and error associated with different steps in the sequence measurement process are indicated in the cause-effect diagram below (Fig. 2). Please see Olson (et al. _in prep_) for a detailed discussion of these sources of error.
+The sources of bias and error associated with different steps in the sequence measurement process are indicated in the cause-effect diagram below (`r figr(label = "causeEffect", prefix = TRUE, link = TRUE, type = "Figure")`). Please see [@Olson2015] for a detailed discussion of these sources of error.
 
-```{r echo = FALSE, fig.align='center', fig.show = 'asis', fig.cap= "Cause and effect diagram indicating the sources of bias and error for the individual components of the sequence measurement process."}
+```{r causeEffect, echo = FALSE, fig.align='center', fig.show = 'asis', fig.cap= "Cause and effect diagram indicating the sources of bias and error for the individual components of the sequence measurement process.", anchor = "Figure"}
 grid.raster(readPNG("MicroRMCauseEffect.png"))
 ```
 
@@ -76,18 +86,16 @@ Genomic purity is provided as an information value and has not been evaluated fo
 ### Sequencing Measurements
 Eight vials from the `r rm_number` lot were randomly selected as representatives of the lot for sequencing at NIST. In addition to NIST measurements, the material was sequenced using the Pacific Biosciences [^pacbio] RSII, and optical mapping was by OpGen through their MapIt service. 
 
-```{r echo = FALSE,child='rm_specific_nist_sequencing.Rmd' }
-## Add text specific to rm regarding sequencing measurements made at NIST.
+<!--
+Add text specific to rm regarding sequencing measurements made at NIST.
+-->
+```{r rmSpecificSequencing, echo = FALSE,child='rm_specific_nist_sequencing.Rmd' }
 ```
 
 ### Sequence Analysis Methods
 For the genome assembly we started with a _de novo_ genome assembly and validated the assembly using optical mapping and sequencing data generated using orthogonal measurement methods. Long read sequence data generated with the Pacific Biosciences [^pacbio] RSII generate sequence reads with a median length of around 8kb, which is long enough to spand the ribosomal operon repeat regions, often resulting in a complete genome assembly [@Koren2013]. While the long reads allow for the assembly of a complete genome the relatively high error rate ~11\%[^pb-error] (primarily insertions and deletions) for individual reads can lead to small variant errors. 
 
-The assembly was validated using orthogonal methods; optical mapping and short read sequencing.  Optical mapping provides information regarding the overall structure of the genome based on the location of restriction sites within long fragments (average size > 200Mb)(Fig. OpMap).  Comparison of the fragment patterns between the optical mapping data and _in-silico_ generated fragment patterns from the genome assembly indicates potential misassemblies in the genome assembly [@Mendelowitz2014]. The Optical mapping data was generated by a commercial vendor OpGen[^opgen] and sources of bias and error have not been fully investigated. The due to the resolution limit of the optical mapping method it is unable to detect misassemblies smaller than 3 kb.  
-
-```{r echo = FALSE, fig.align='center', fig.width = 5, fig.show = 'asis', fig.cap= "Optical mapping measurement process.[^opmap-diagram]"}
-#grid.raster(readJPEG("Optical_mapping.jpg"))
-```
+The assembly was validated using orthogonal methods; optical mapping and short read sequencing.  Optical mapping provides information regarding the overall structure of the genome based on the location of restriction sites within long fragments (average size > 200Mb).  Comparison of the fragment patterns between the optical mapping data and _in-silico_ generated fragment patterns from the genome assembly indicates potential misassemblies in the genome assembly [@Mendelowitz2014]. The Optical mapping data was generated by a commercial vendor OpGen[^opgen] and sources of bias and error have not been fully investigated. The due to the resolution limit of the optical mapping method it is unable to detect misassemblies smaller than 3 kb.  
 
 Potential misassemblies smaller than 3 kb were identified using short read data generated using orthogonal sequencing technologies Illumina[^illumina] MiSeq, and Ion Torrent[^iontorrent] PGM and Pilon [@Walker2014], software developed to identify and correct misassemblies in microbial genomes.  The sources of bias associated with each of the orthogonal methods were not fully investigated and agreement between the methods supports the hypothesis that the assembly is correct. 
 
@@ -98,17 +106,20 @@ Base level analysis was performed by evaluating the proportion of sequencing rea
 The purity of the reference material in terms of presence of DNA from sources other than `r rm_strain` was assessed using the metagenomic taxonomic read classification algorithm PathoScope [@Hong2014].  This method uses an expectation maximization algorithm where the sequence data are first mapped to a database comprised on all sequence data in the Genbank nt database, then through an iterative process re-assigns ambiguously mapped reads to based on the proportion of reads mapped unambigously to individual taxa in the database. 
 
 #### Method Reproducibility
-The methods used to characterize the reference material were developed in a manner to facilitate reuse and ensure computational reproducibility, obtaining the same results when starting with the same set of measurement data.  To achive this goal the data, computer code, as well as the computing environment are all publically available.  The raw sequence data is archived at the Genbank Sequence Read Archive, ([www.ncbi.nlm.nih.gov/sra](http://www.ncbi.nlm.nih.gov/sra)), see table 1 in the summary of sequencing data results section for accession numbers.  The code used to characterize the material is available through GitHub as a python bioinformatics pipeline, [www.github/nate-d-olson/pepr](http://www.github/nate-d-olson/pepr), and an R package, [www.github/nate-d-olson/peprr](http://www.github/nate-d-olson/peprr).  The bioinformatics pipeline performs the initial sequence analysis and uses a Docker environment for dependencies,[www.docker.org](http://www.docker.com). A flowchart of thepipeline used to characterize the RM can be found in Appendix. The R package, includes functions for loading the output from the pipeline into an sqlite database and generating the summary figures and tables found within this report of analysis.  
+The methods used to characterize the reference material were developed in a manner to facilitate reuse and ensure computational reproducibility, obtaining the same results when starting with the same set of measurement data.  To achive this goal the data, computer code, as well as the computing environment are all publically available.  The raw sequence data is archived at the Genbank Sequence Read Archive, ([www.ncbi.nlm.nih.gov/sra](http://www.ncbi.nlm.nih.gov/sra)), see `r figr(label = "seqTable", prefix = TRUE, link = TRUE, type = "Table")` in the summary of sequencing data results section for accession numbers.  The code used to characterize the material is available through GitHub as a python bioinformatics pipeline, [www.github/nate-d-olson/pepr](http://www.github/nate-d-olson/pepr), and an R package, [www.github/nate-d-olson/peprr](http://www.github/nate-d-olson/peprr).  The bioinformatics pipeline performs the initial sequence analysis and uses a Docker environment for dependencies,[www.docker.org](http://www.docker.com). A flowchart of thepipeline used to characterize the RM can be found in Appendix. The R package, includes functions for loading the output from the pipeline into an sqlite database and generating the summary figures and tables found within this report of analysis.  
 
 \pagebreak
 
 ### Sequence Analysis Results
 #### Summary of Sequencing Datasets
-```{r echo = FALSE,child='rm_specific_dataset_summary.Rmd' }
-## Add text specific to rm regarding general summary of sequencing datasets.
+
+<!--
+Add text specific to rm regarding general summary of sequencing datasets.
+-->
+```{r rmSpecificDataSummary, child='rm_specific_dataset_summary.Rmd' }
 ```
 
-```{r echo = FALSE, message=FALSE, warning=FALSE}
+```{r seq_table, anchor = "Figure"}
 kable(seq_summary_table(peprDB), 
       round = 0, row.names = FALSE, caption = "Summary of sequencing datasets")
 ```
@@ -116,83 +127,83 @@ kable(seq_summary_table(peprDB),
 \pagebreak
 
 #### Genome Assembly
-```{r echo = FALSE,child='rm_specific_assembly_summary.Rmd' }
-## Add text specific to rm regarding general summary of genome assembly
+<!--
+Add text specific to rm regarding general summary of genome assembly
+-->
+```{r rmSpecificAssembly, child='rm_specific_assembly_summary.Rmd'}
 ```
 
-```{r echo = FALSE,child='rm_specific_optical_map_summary.Rmd' }
-## Add text specific to rm regarding general summary of optical mapping results
+<!--
+Add text specific to rm regarding general summary of optical mapping results
+-->
+```{r rmSpecificOpticalMap, echo = FALSE,child='rm_specific_optical_map_summary.Rmd' }
 ```
 
-```{r echo = FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.show = 'asis', fig.cap= "Assembly of optical mapping data."}
+```{r opgenAssembly, fig.cap= "Assembly of optical mapping data.", anchor = "Figure"}
 grid.raster(readPNG("opgen_assembly.png"))
 ```
 
-```{r echo = FALSE,child='rm_specific_assembly_validation_summary.Rmd' }
-## Add text specific to rm regarding general summary of assembly validation results.
+<!--
+Add text specific to rm regarding general summary of assembly validation results
+-->
+```{r rmSpecificAssemblyValidation, child='rm_specific_assembly_validation_summary.Rmd' }
 ```
 
-```{r echo = FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.cap= "Comparison of optical map data to genome assembly."}
+<!--
+```{r assemblyComp, echo = FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.cap= "Comparison of optical map data to genome assembly."}
 # __SPECIFIC TO RM__
 grid.raster(readPNG("opgen_assembly_comparison.png"))
 ```
+-->
 
-```{r echo =FALSE, message=FALSE, warning=FALSE}
+<!--
+```{r pilonTable, echo =FALSE, message=FALSE, warning=FALSE}
 ## need a better way to present this information
-#kable(pilon_changes_table(peprDB), 
-#      row.names = FALSE,
-#      caption = "Changes made to reference genome with Pilon")
 ```
+-->
 
 \pagebreak
 
 #### Base Level Analysis
 ##### Base Purity
-```{r echo = FALSE,child='rm_specific_base_level_purity_summary.Rmd' }
-## Add text specific to rm regarding general summary of base level purity.
+<!--
+Add text specific to rm regarding general summary of base level purity.
+-->
+```{r rmSpecificBaseLevelPurity, echo = FALSE,child='rm_specific_base_level_purity_summary.Rmd' }
 ```
 
-```{r echo = FALSE, message = FALSE, warnings = FALSE, fig.align='center', fig.show = 'asis', fig.cap= "Comparison of base purity values for PGM and MiSeq."}
-purity_scatter_plot(peprDB)
-```
-
-```{r echo =FALSE, message=FALSE, warning=FALSE}
-## not sure how much this table really adds - excluding for now
-# kable(low_purity_table(peprDB), 
-#       row.names = FALSE,round = 2,
-#       caption = "Positions with base level purity values less than 98% for both platforms.")
-```
-
-```{r echo = FALSE, fig.align='center', fig.height = 7, fig.show = 'asis', fig.cap= "Bias metrics for low purity positions.", message=FALSE, warning=FALSE}
-low_pur_metrics_figure(peprDB)
-```
 
 ##### Sequence homogeneity
-```{r echo = FALSE,child='rm_specific_base_level_homogeneity_summary.Rmd' }
-## Add text specific to rm regarding general summary of base level homogeneity.
+<!--
+Add text specific to rm regarding general summary of base level homogeneity.
+-->
+```{r rmSpecificHomogeneity, echo = FALSE,child='rm_specific_base_level_homogeneity_summary.Rmd' }
 ```
 
-```{r echo =FALSE}
+```{r homogeneityTable, echo =FALSE, anchor = "Table"}
 kable(homogeneity_sig_table(peprDB, rename_cols = TRUE), 
       row.names = FALSE,
       caption = "Pairwise variant analysis results")
 ```
 
-```{r echo = FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.show = 'asis', fig.cap= "Among sample variation in purity values."}
+```{r homogeneityPointFig, fig.cap= "Among sample variation in purity values.", anchor = "Figure"}
 #not needed to support statements in report
 #homogeneity_point_line_figure(peprDB)
 ```
 
 #### Genomic Purity
-```{r echo = FALSE,child='rm_specific_genomic_purity.Rmd' }
-## Add text specific to rm regarding genomic purity.
+<!--
+Add text specific to rm regarding genomic purity.
+-->
+```{r rmSpecificGenomicPurity, echo = FALSE, child='rm_specific_genomic_purity.Rmd' }
 ```
 
-```{r echo = FALSE, fig.align='center', fig.show = 'asis', fig.cap= "Proportion of reads from contaminant DNA.", warning=FALSE, message=FALSE}
+
+```{r contamCountsFig, fig.cap= "Proportion of reads from contaminant DNA.", anchor = "Figure"}
 contam_counts_figure(peprDB, rm_genus)
 ```
 
-```{r echo = FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.height = 6, fig.cap= "Breakdown of contaminants by organism.",fig.retina=TRUE}
+```{r contamPointLineFig, fig.height = 6, fig.cap= "Breakdown of contaminants by organism.", anchor = "Figure"}
 contam_point_line_figure(peprDB, rm_genus)
 ```
 
@@ -208,41 +219,42 @@ An isochronous stability study was performed to ensure integrity of DNA fragment
 
 All temperature-based conditions were monitored with a data logger to track temperature, humidity and dew point over the entirety of the time-course.  All samples were stored in opaque boxes to minimize exposure the light.  At the conclusion of the time-course samples were placed in a -20°C freezer until measurements were made.
 
-```{r echo = FALSE,child='rm_specific_stability_experimental_design.Rmd' }
-## Add text specific to rm regarding stability experiment
+<!--
+Add text specific to rm regarding stability experiment
+-->
+```{r rmSpecificStabExpDesign, child='rm_specific_stability_experimental_design.Rmd' }
 ```
 
-
 ### Analysis of Stability Study
-To assess the stability of the DNA fragment size distribtion the proportion of DNA in a PFGE gel lane for each sample was determined for two regions between ladder markers. The high region is the proportion of DNA between the 48.5kb and 197kb markers and the low region between 9.24kb and 48.5kb markers. Treatment proportions were compared to controls using a T-test. The gels were processed using the R package peprrDnaStability ([www.github/nate-d-olson/pepr](http://www.github/nate-d-olson/pepr)). Prior to processing the gels were first manually cropped to remove regions of the gel to the left and right of the outer lanes. The `runfindMarkers` starts up an interactive application to define the parameters used in processing the gels (Figure **XYZ**). Croped and original gel images as well as the parameter set used to analyze the gels are available at __%%TODO%%__.
-
-__TODO Screenshot of Shiny App TODO__
+To assess the stability of the DNA fragment size distribtion the proportion of DNA in a PFGE gel lane for each sample was determined for two regions between ladder markers. The high region is the proportion of DNA between the 48.5kb and 197kb markers and the low region between 9.24kb and 48.5kb markers. Treatment proportions were compared to controls using a T-test. The gels were processed using the R package peprrDnaStability ([www.github/nate-d-olson/peprDnaStability](http://www.github/nate-d-olson/peprDnaStability)). Prior to processing the gels were first manually cropped to remove regions of the gel to the left and right of the outer lanes. The `runfindMarkers` starts up an interactive application to define the parameters used in processing the gels. Cropped and original gel images as well as the parameter set used to analyze the gels are available at __%%TODO%%__.
 
 #### Stability Study Results
-```{r echo = FALSE,child='rm_specific_stability_results.Rmd' }
-## Add text specific to rm regarding stability results
+<!--
+Add text specific to rm regarding stability results
+-->
+```{r rmSpecificStability, child='rm_specific_stability_results.Rmd' }
 ```
 
 \pagebreak
 
 
 # Appendix
-```{r echo = FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.cap= "Certificate of analysis provided by the reference material manufacturer."}
+```{r lofstrandROA, fig.cap= "Certificate of analysis provided by the reference material manufacturer.", anchor = "Figure"}
 # __SPECIFIC TO RM__
 grid.raster(readPNG("Lofstrand_certificate_of_analysis.png"))
 ```
 
-# ```{r echo = FALSE,child='rm_specific_vial_pull.Rmd' }
-# ## Information about rm random vial selection
-# ```
 
-```{r echo = FALSE, message=FALSE, warning=FALSE, fig.width=3, fig.height=3, fig.align='center', fig.cap= "RM tube label"}
+<!-- 
+```{r echo = FALSE,child='rm_specific_vial_pull.Rmd' }
+## Information about rm random vial selection
+```
+--> 
+
+
+```{r rmlabel, fig.width=3, fig.height=3, fig.cap= "RM tube label", anchor = "Figure"}
 # __SPECIFIC TO RM__
 grid.raster(readPNG("RMLabel.png"))
-```
-
-```{r echo = FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.cap= "Bioinformatic pipeline flowchart."}
-grid.raster(readPNG("bioinf-pipeline-flowchart.png"))
 ```
 
 \pagebreak
