updated to new more generic report of analysis

--- a/inst/rmarkdown/templates/pepr-roa/skeleton/micro_rm_references.bib
+++ b/inst/rmarkdown/templates/pepr-roa/skeleton/micro_rm_references.bib
@@ -186,3 +186,52 @@ year = {2002}
 }
 
 
+@article{Olson2015,
+abstract = {Innovations in sequencing technologies have allowed biologists to make incredible advances in understanding biological systems. As experience grows, researchers increasingly recognize that analyzing the wealth of data provided by these new sequencing platforms requires careful attention to detail for robust results. Thus far, much of the scientific communities’ focus for use in bacterial genomics has been on evaluating genome assembly algorithms and rigorously validating assembly program performance. Missing, however, is a focus on critical evaluation of variant callers for these genomes. Variant calling is essential for comparative genomics as it yields insights into nucleotide-level organismal differences. Variant calling is a multistep process with a host of potential error sources that may lead to incorrect variant calls. Identifying and resolving these incorrect calls is critical for bacterial genomics to advance. The goal of this review is to provide guidance on validating algorithms and pipelines used in variant calling for bacterial genomics. First, we will provide an overview of the variant calling procedures and the potential sources of error associated with the methods. We will then identify appropriate datasets for use in evaluating algorithms and describe statistical methods for evaluating algorithm performance. As variant calling moves from basic research to the applied setting, standardized methods for performance evaluation and reporting are required; it is our hope that this review provides the groundwork for the development of these standards.},
+author = {Olson, Nathan and Lund, Steven P. and Colman, Rebecca E. and Foster, Jeffrey T and Sahl, Jason W and Schupp, James M and Keim, Paul and Morrow, Jayne B and Salit, Marc L and Zook, Justin M},
+doi = {10.3389/fgene.2015.00235},
+issn = {1664-8021},
+journal = {Frontiers in Genetics},
+keywords = {INDEL,Next-generation sequencing,Performance metrics,Single nucleotide variants,Variant calling},
+language = {English},
+publisher = {Frontiers},
+title = {{Best Practices for Evaluating Single Nucleotide Variant Calling Methods for Microbial Genomics}},
+url = {http://journal.frontiersin.org/article/10.3389/fgene.2015.00235/abstract},
+volume = {6},
+year = {2015}
+}
+
+@Manual{R2015,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2015},
+    url = {http://www.R-project.org/},
+  }
+
+@article{wickham2014tidy,
+  title={Tidy Data},
+  author={Wickham, Hadley},
+  journal={Journal of Statistical Software},
+  volume={59},
+  number={10},
+  year={2014}
+}
+@article{Langmead2012,
+abstract = {As the rate of sequencing increases, greater throughput is demanded from read aligners. The full-text minute index is often used to make alignment very fast and memory-efficient, but the approach is ill-suited to finding longer, gapped alignments. Bowtie 2 combines the strengths of the full-text minute index with the flexibility and speed of hardware-accelerated dynamic programming algorithms to achieve a combination of high speed, sensitivity and accuracy.},
+author = {Langmead, Ben and Salzberg, Steven L},
+doi = {10.1038/nmeth.1923},
+file = {:Users/nolson/Documents/Mendeley Desktop/Langmead, Salzberg - 2012 - Fast gapped-read alignment with Bowtie 2.pdf:pdf},
+issn = {1548-7105},
+journal = {Nature methods},
+keywords = {Algorithms,Computational Biology,Computational Biology: methods,Databases, Genetic,Genome, Human,Genome, Human: genetics,Humans,Sequence Alignment,Sequence Alignment: methods,Sequence Analysis, DNA,Sequence Analysis, DNA: methods},
+month = apr,
+number = {4},
+pages = {357--9},
+pmid = {22388286},
+title = {{Fast gapped-read alignment with Bowtie 2.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3322381\&tool=pmcentrez\&rendertype=abstract},
+volume = {9},
+year = {2012}
+}
